@@ -45,6 +45,9 @@ Bugs fixed
   invalidation transaction ids matched the cached transaction ids
   should have been ignored.
 
+- Conflict errors didn't invalidate ZEO cache entries.
+
+
 3.10.0b1 (2010-05-18)
 =====================
 
